-------------------------------------------------------------------------------
Changes in version 0.96

- Added code to use MySQL instead of files for all the autoresponse
  data.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.95

- Made the "MESSAGE-FILE" parameter optional, defaulting to
  "message.txt" in the autoresponder directory.

- Added a patch from Erik Sjoelund <erik@xpedio.com> to insert the
  original message's message-ID into a new In-Reply-To header field.

- Ignore messages containing the header fields listed in RFC 2369:
	List-(Help|Unsubscribe|Subscribe|Post|Owner|Archive):

- Portability fixes and documentation bugs.

- Added a manual page.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.93

- Fixed an off-by-one bug in the rate limiting logic (again).

- Fixed an off-by-one bug in the Delivered-To checking code.

- The output writing routine will now substitute "%S" in the
  autoresponse message with the original message's subject.
-------------------------------------------------------------------------------
Changes in version 0.92

- Fixed the rate limiting logic that would prevent messages from being
  sent out at the appropriate interval.

- Fixed bug in option parsing.
-------------------------------------------------------------------------------
Changes in version 0.91

- Added an option to insert the original subject into the reply.

- Simplified the header scanning logic.
-------------------------------------------------------------------------------